--- a/package.json
+++ b/package.json
@@ -8,36 +8,53 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "@amap/amap-jsapi-loader": "1.0.1",
+    "@jiaminghi/data-view": "2.10.0",
+    "@types/node": "18.11.0",
+    "amfe-flexible": "2.2.1",
+    "axios": "0.24.0",
+    "core-js": "3.6.5",
+    "echarts": "5.3.0",
+    "font-awesome": "4.7.0",
+    "moment": "2.29.4",
+    "vue": "2.6.14",
+    "vue-class-component": "7.2.6",
+    "vue-property-decorator": "9.1.2",
+    "vue-router": "3.5.2",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@types/jest": "24.9.1",
+    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@typescript-eslint/parser": "2.34.0",
+    "@vue/cli-plugin-babel": "4.5.9",
+    "@vue/cli-plugin-eslint": "4.5.9",
+    "@vue/cli-plugin-router": "4.5.9",
+    "@vue/cli-plugin-typescript": "4.5.9",
+    "@vue/cli-plugin-unit-jest": "4.5.9",
+    "@vue/cli-plugin-vuex": "4.5.9",
+    "@vue/cli-service": "4.5.9",
+    "@vue/compiler-sfc": "3.0.11",
+    "@vue/eslint-config-prettier": "6.0.0",
+    "@vue/eslint-config-typescript": "5.1.0",
+    "@vue/test-utils": "1.1.2",
+    "babel-plugin-import": "1.13.3",
+    "compression-webpack-plugin": "5.0.2",
+    "eslint": "6.8.0",
+    "eslint-plugin-prettier": "3.3.0",
+    "eslint-plugin-vue": "6.2.2",
+    "less": "2.7.3",
+    "less-loader": "4.1.0",
+    "postcss-pxtorem": "5.1.1",
+    "chalk": "4.1.0",
+    "minimist": "1.2.5",
+    "prettier": "1.19.1",
+    "pug": "3.0.0",
+    "pug-plain-loader": "1.1.0",
+    "stylus": "0.54.8",
+    "stylus-loader": "3.0.2",
+    "typescript": "3.9.7",
+    "vue-template-compiler": "2.6.14",
+    "webpack-bundle-analyzer": "4.4.2"
+  }
 }
