--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@jiaminghi/data-view": "2.10.0",
     "@types/node": "18.11.0",
     "axios": "0.24.0",
+    "cesium": "^1.95.0",
     "core-js": "3.6.5",
     "echarts": "5.3.0",
     "font-awesome": "4.7.0",
@@ -38,13 +39,14 @@
     "@vue/eslint-config-typescript": "5.1.0",
     "@vue/test-utils": "1.1.2",
     "babel-plugin-import": "1.13.3",
+    "chalk": "4.1.0",
     "compression-webpack-plugin": "5.0.2",
+    "copy-webpack-plugin": "^6.3.2",
     "eslint": "6.8.0",
     "eslint-plugin-prettier": "3.3.0",
     "eslint-plugin-vue": "6.2.2",
     "less": "2.7.3",
     "less-loader": "4.1.0",
-    "chalk": "4.1.0",
     "minimist": "1.2.5",
     "prettier": "1.19.1",
     "pug": "3.0.0",
